--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-social-login-buttons": "^3.6.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "validator": "^13.7.0",
