--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-social-login-buttons": "^3.6.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "sweetalert2": "^11.4.8",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
