--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.1.3",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.2",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
